job opening for remote worker

--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="utf-8">
     <meta property="fb:app_id" content="483015181718546" />
-    <meta property="og:title" content="到 何六百(南投埔里)工作(徵1~2人)" />
+    <meta property="og:title" content="到 何六百工作(遠端徵1~2人)" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://jobs.ho600.com" />
     <meta property="og:image" content="https://jobs.ho600.com/statics/images/light_bg.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="200" />
     <meta property="og:image:height" content="199" />
-    <meta property="og:description" content="年薪:60萬+ ; 每週工時:40小時- ; 週休 3 日; 學歷/科系/性別/年齡/...: 不限; 主要工作語言: 中華民國國語，次為英文及日文; 公司專長: 難題諮詢, 專業營建管理, 系統管理, 網頁程式設計; 使命: 讓現實世界映射在 0 與 1 的網路上，求解後供人們作對的事;" />
+    <meta property="og:description" content="年薪:60萬+ ; 每月工時:160小時- ; 學歷/科系/性別/年齡/...: 不限; 主要工作語言: 中華民國國語，次為英文及日文; 公司專長: 難題諮詢, 專業營建管理, 系統管理, 網頁程式設計; 使命: 讓現實世界映射在 0 與 1 的網路上，求解後供人們作對的事;" />
 
-    <title>到 何六百(南投埔里)工作(徵1~2人)</title>
+    <title>到 何六百工作(遠端徵1~2人)</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="年薪:60萬+ ; 每週工時:40小時- ; 週休 3 日; 學歷/科系/性別/年齡/...: 不限; 主要工作語言: 中華民國國語，次為英文及日文; 公司專長: 難題諮詢, 專業營建管理, 系統管理, 網頁程式設計; 使命: 讓現實世界映射在 0 與 1 的網路上，求解後供人們作對的事;">
+    <meta name="description" content="薪資福利:60萬+ ; 每月工時:160小時- ; 學歷/科系/性別/年齡/...: 不限; 主要工作語言: 中華民國國語，次為英文及日文; 公司專長: 難題諮詢, 專業營建管理, 系統管理, 網頁程式設計; 使命: 讓現實世界映射在 0 與 1 的網路上，求解後供人們作對的事;">
     <meta name="keywords" content="專業營建管理,Professional Construction Management,系統管理,System Administration,網頁程式設計,Web Programming,Python,Django,PostgreSQL,MySQL,Ubuntu Linux,jQuery,Javascript,HTML,Amazon Web Service,Google App Engine">
     <meta name="author" content="ho600 Ltd.">
 
@@ -71,7 +71,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="/#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">到</span> 何六百(南投埔里)工作(徵1~2人)
+                    <i class="fa fa-play-circle"></i>  <span class="light">到</span> 何六百工作(遠端徵1~2人)
                 </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -161,9 +161,9 @@
                         <tr>
                             <td>薪資</td>
                             <td>月</td>
-                            <td>40,600</td>
+                            <td>50,000</td>
                             <td>36</td>
-                            <td>1,461,600</td>
+                            <td>1,800,000</td>
                             <td>0</td>
                             <td>0</td>
                         </tr>
@@ -177,43 +177,34 @@
                             <td>0</td>
                         </tr>
                         <tr>
-                            <td>紅利</td>
-                            <td>年</td>
-                            <td>81,200</td>
-                            <td>3</td>
-                            <td>243,600</td>
-                            <td>0</td>
-                            <td>0</td>
-                        </tr>
-                        <tr>
                             <td>勞退金(雇主提撥)</td>
                             <td>月</td>
-                            <td>2,520</td>
+                            <td>3,000</td>
                             <td>36</td>
                             <td>0</td>
-                            <td>90,720</td>
+                            <td>108,000</td>
                             <td>0</td>
                         </tr>
                         <tr>
                             <td>勞保(雇主負擔)</td>
                             <td>月</td>
-                            <td>2,940</td>
+                            <td>3,417</td>
                             <td>36</td>
                             <td>0</td>
                             <td>0</td>
-                            <td>105,840</td>
+                            <td>123,012</td>
                         </tr>
                         <tr>
                             <td>健保(雇主負擔)</td>
                             <td>月</td>
-                            <td>1,992</td>
+                            <td>2,292</td>
                             <td>36</td>
                             <td>0</td>
                             <td>0</td>
-                            <td>71,712</td>
+                            <td>82,512</td>
                         </tr>
                         <tr>
-                            <td>埔基高階健康檢查</td>
+                            <td>區域醫院健康檢查</td>
                             <td>年</td>
                             <td>16,000</td>
                             <td>3</td>
@@ -222,22 +213,13 @@
                             <td>48,000</td>
                         </tr>
                         <tr>
-                            <td>提供食宿</td>
+                            <td>遠端辦公費用</td>
                             <td>月</td>
-                            <td>10,000</td>
+                            <td>6,000</td>
                             <td>36</td>
                             <td>0</td>
                             <td>0</td>
-                            <td>360,000</td>
-                        </tr>
-                        <tr>
-                            <td>返家交通費(限臺灣本島部份)</td>
-                            <td>月</td>
-                            <td>2,000</td>
-                            <td>36</td>
-                            <td>72,000</td>
-                            <td>0</td>
-                            <td>0</td>
+                            <td>216,000</td>
                         </tr>
                         <tr>
                             <td>3C 及辦公設備支出(資本門)</td>
@@ -253,33 +235,30 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td>1,777,200</td>
-                            <td>90,720</td>
-                            <td>729,552</td>
+                            <td>1,800,000</td>
+                            <td>108,000</td>
+                            <td>613,524</td>
                         </tr>
                         <tr class="bg-success">
                             <td><strong>年平均</strong></td>
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td><strong>592,400</strong></td>
-                            <td><strong>30,240</strong></td>
-                            <td>243,184</td>
+                            <td><strong>600,000</strong></td>
+                            <td><strong>36,000</strong></td>
+                            <td>204,508</td>
                         </tr>
                         <tr class="bg-success">
                             <td>月平均</td>
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td>49,366</td>
-                            <td>2,520</td>
-                            <td>20,265</td>
+                            <td>50,000</td>
+                            <td>3,000</td>
+                            <td>17,043</td>
                         </tr>
                     </tbody>
                 </table>
-                <p>
-                    薪資有兩種發放方式，預設的第一種是每月固定 40,600 元，一路發到離職為止。若是覺得沒挑戰性，那也可以選擇第一個月發 35,600 元，之後再依表現，可晉升至 40,600 元或是 45,600 元。
-                </p>
                 <p>
                     一般企業常見的生日禮金、三節禮金、員工旅遊、尾牙抽獎都<span class="text-danger">不會有</span>，主要原因是敝公司不是「<strong>一般企業</strong>」，而次要原因如下：
                 </p>
@@ -308,16 +287,20 @@
                     加班費： 敞公司原則上僅同意董事及輪班之系統管理員加班，加班費依<a href="http://law.moj.gov.tw/LawClass/LawAll.aspx?PCode=N0030001">勞動基準法</a>計算。其餘員工<strong>非經董事同意不得加班</strong>。
                 </p>
                 <p>
-                    紅利發放機制： 每年的 1/1, 4/1, 7/1 , 10/1 發放。員工須任職至發放日的前一天(12/31, 3/31, 6/30, 9/30)才符合發放資格。當期發放數為上一期任職日曆天數除以120(高於 1 者，以 1 計)乘以 81,200 乘以 0.25。
-                </p>
-                <p>
-                    食宿部份，乃提供<strong>單人宿舍</strong>，並在<strong>上班日</strong>提供早、中、晚餐點，餐點美味程度見人見智，反正就是跟創辦人吃的一樣。食宿兩者皆自由選用，惟不用者，不得要求兌換現金。
-                </p>
-                <p>
-                    敝公司鼓勵員工每個月都要回家一次，所以提供去回車票、機票、油資等補助，目的地若不在臺灣本島，也一樣補助從敝公司去回本島機場、港口的交通費。補助原則：實報實銷、每月限額 2,000 元、不得跨月累計。
-                </p>
-                <p>
                     員工所使用的 3C 及辦公設備皆為自選，任職滿 3 年後，即屬於員工所有。惟購置設備的支出模式尚無定案，待與員工討論。尚無定案的原因，主要是避免員工任職不久後，即告離職，留下一堆自選的 3C 及辦公設備給敝公司造成麻煩，畢竟其他新進員工也會有自選設備，而敝公司也不打算作二手用品賣家。
+                </p>
+                <p>
+                <noscript>請用您的 javascript 功能，以便留下 E-mail 。</noscript>
+                <form class="form-inline my_form">
+                    <div class="form-group">
+                        <label class="sr-only" for="exampleInputEmail4">Email</label>
+                        <input type="email" name="email" class="form-control" id="exampleInputEmail4" placeholder="Email">
+                        <input type="hidden" name="type" value="register-job-update-info" />
+                    </div>
+                    <button type="submit" style="display: none;" class="btn btn-success click-trigger" function_name="post_email">註冊信箱收通知信</button>
+                </form>
+                <br/>
+                <h4>* 可註冊信箱，如果職缺內容有重大更新，可寄信通知。</h4>
                 </p>
             </div>
         </div>
@@ -343,7 +326,7 @@
                         伺服器皆置於雲端平台，主要是 Amazon AWS 及 Google App Engine 。
                     </p>
                     <p>
-                        工作角色分為三大部份： 系統管理員、後端程式開發員、前端設計師。每一員工皆需擔任此三角色，也就是所謂的「<span class="text-danger">全能工班(營建業術語: Full-Capacity Operation) || 網站全端工程師(軟體業術語: Full Stack Web Engineer)</span>」，惟其工作比例可有不一，目前依序分配為 45%，35%，20% 。然此比例會視公司需要有所調整，並不受限於招募時期所定比例。
+                        工作角色分為三大部份： 系統管理員(DevOps)、後端程式開發員、前端設計師。每一員工皆需擔任此三角色，也就是所謂的「<span class="text-danger">全能工班(營建業術語: Full-Capacity Operation) || 網站全端工程師(軟體業術語: Full Stack Web Engineer)</span>」，惟其工作比例可有不一，目前依序分配為 20%，40%，40% 。然此比例會視公司需要有所調整，並不受限於招募時期所定比例。
                     </p>
                     <p>
                         在溝通語言及文件寫作上，主要使用中華民國國語，次要使用英文，少部份使用日文。
@@ -378,7 +361,7 @@
                         若您實在不了解專案經理及專案管理到底是什麼東西? 恰恰好，創辦人表定上的學歷文件說明了他在這個領域花了很多時間學習及思索，來吧! 就來何六百與創辦人一起學習、思考吧!
                     </p>
                     <p>
-                        總結來說，到何六百工作，您有時候會是系統管理員、有時候是後端程式開發員、有時候是前端設計師、有時候多兼個專案經理，但不變的是<span class="text-danger">每週標準工時為 40 小時以下</span>。
+                        總結來說，到何六百工作，您有時候會是系統管理員、有時候是後端程式開發員、有時候是前端設計師、有時候多兼個專案經理，但不變的是<span class="text-danger">每月工時為 160 小時以下</span>。
                     </p>
                 </div>
             </div>
@@ -392,12 +375,8 @@
                     <h2 class="text-center">彈性工時</h2>
                     <p>依 104 年 12 月 16 日修正之新版勞基法<a href="http://law.moj.gov.tw/LawClass/LawSingle.aspx?Pcode=N0030001&FLNO=30">第 30 條</a>規定，敝公司之員工工作時數如下：
                     <ul class="p">
-                        <li>每週上班日為週一至週四，上班日遇國定假日即改休假日</li>
-                        <li>每天正常上班時數上限為 10 小時，上班彈性打卡時間為早上 6 點至 8 點，下班彈性打卡時間為晚上 6 點至 8 點，期間有 2 個小時的休息時間。打卡地點則為敝公司辦公室</li>
-                        <li><strong>每一員工在經適當培訓後皆需參與系統管理的輪班工作</strong>，輪班方式為隨身攜帶值班手機，當代管系統有誤時，從收到警告簡訊起計時，須在 1 小時以內時間進辦公室處理，此時的輪班員工即為緊急排難專案的專案經理，有權責指定相關員工協助處理。若緊急排難專案的起迄時間包含非上班時間，專案所有參與者在非上班時間的工作時數皆列入加班時數，當日總工時不受 10 小時限制</li>
-                        <li>輪班員工當週工時為 36 小時，值班時間若無系統錯誤，也無須補足 40 小時</li>
-                        <li>員工數(不含董事)未達 2 人時，董事始參與輪班</li>
-                        <li>每次輪班人數限 1 人，輪班時間固定為一週，期間遇國定假日仍須值班。交接時間為每週一下午 2 點，交接日如遇國定假日，則交接給董事，董事則在假日結束後的第一個上班日交接給原排定輪班之員工</li>
+                        <li>每周工時最多為 48 小時，每月總工時最多為 160 小時
+                        <li>單日上班時數上限為 10 小時，上班時間為早上 6 點至 晚上 10 點的區間內任選 3 ~ 10 個工作小時</li>
                     </ul>
                 </div>
             </div>
@@ -426,6 +405,12 @@
                 <h2 class="text-center">招募限制</h2>
                 <p>1.</p>
                 <p>
+                    應聘者須擁有中華民國國籍，遠端工作地點主要於中華民國實際管轄境內。
+                </p>
+                <p>
+                </p>
+                <p>2.</p>
+                <p>
                     依我國<a href="http://law.moj.gov.tw/LawClass/LawAll.aspx?PCode=N0090001">就業服務法</a>及<a href="http://law.moj.gov.tw/LawClass/LawAll.aspx?PCode=N0090031">外國人從事就業服務法</a>規定，未擁有中華民國國籍者，敝公司目前無法聘雇。主要癥結在於敞公司資本額或營業額未達門檻，以及要求員工需在中華民國境內值班。
                 </p>
                 <p>
@@ -442,16 +427,16 @@
                 </form>
                 <p>
                 </p>
-                <p>2.</p>
+                <p>3.</p>
                 <p>
                     應聘人<span class="text-danger">禁止</span>在筆試、電談(字談)透露個人識別資訊或利用其他管道向考試委員(也就是創辦人)關說。個人識別資訊包含但不僅限於電子信箱、部落格、網站、網域、學歷、科系、學校、種族、階級、宗教、黨派、籍貫、出生地、性別、性傾向、年齡、婚姻、身心障礙或以往工會會員身分者，容貌及五官則開放於面試過程展現並在此時檢驗有效之中華民國身份證正本。
                 </p>
                 <p>
                     應聘人<span class="text-danger">無需準備履歷或自傳</span>，考試委員對於您有幾個父親、幾個母親、個性如何…等無關敞公司賺錢的資訊一點也沒有興趣。展現您學習工具、運用工具的聰明、熱情、認真及</strong><a href="https://zh.wikipedia.org/wiki/%E6%8B%89%E9%87%8C%C2%B7%E6%B2%83%E5%B0%94#.E7.A8.8B.E5.BA.8F.E5.91.98.E7.BE.8E.E5.BE.B7">懶惰</a>足已。
                 </p>
-                <p>3.</p>
+                <p>4.</p>
                 <p>
-                    敞公司招募員工在筆試、電談(字談)、面試上，會花費長時間，對單一求職者而言，短可能也要花到 1 個月以上，對當下需職孔急的待業人士而言，會是杯水車薪。建議求職者可在學校就讀(就算還有 4 年才畢業)或在其他企業任職時，即參加招募，筆試通過即無限期保留筆試成績。敞公司開發的筆試系統可完全保護您的身份，不會讓第二個人知道，除非您本人透露。而電談(字談)、面試、實地實習可等到比較明朗的可上班日前附近再來舉行也是歡迎的。
+                    敞公司招募員工在筆試、電談(字談)、面試上，會花費長時間，對單一求職者而言，短可能也要花到 1 個月以上，對當下需職孔急的待業人士而言，會是杯水車薪。建議求職者可在學校就讀(就算還有 4 年才畢業)或在其他企業任職時，即參加招募，筆試通過即無限期保留筆試成績。敞公司開發的筆試系統可完全保護您的身份，不會讓第二個人知道，除非您本人透露。而電談(字談)、面試可等到比較明朗的可上班日前附近再來舉行也是歡迎的。
                 </p>
             </div>
         </div>
@@ -468,7 +453,7 @@
                         <li>於 24 小時內上傳<span class="text-danger">公錀</span>至筆試網站，並註冊帳戶</li>
                         <li>至筆試網站寫一封加密信，加密錀匙為上述應聘帳號之 PGP 公錀及 <a href="#">jobs.at.ho600@yueh-cake.com</a> 公錀(ID: )，信件內容為 md5("<span class="text-success">${應聘人之中華民國身份證號後 8 碼數字}</span><span class="text-info">${應聘人之中華民國身份證上載明出生年月日(限數字，無區隔符)}</span><span class="text-success">${應聘人之中華民國身份證上載明發證年月日(限數字，無區隔符)}</span><span class="text-info">${應聘人之中華民國身份證背面之空白身分證流水號(依序*任*選 5 碼)}</span>".replace(/[^0-9]/g, ""))[:<span class="text-danger">14</span>] 之前 <span class="text-danger">14</span> 碼字串。<span class="text-danger">請注意</span>： 是傳 <span class="text-danger">14</span> 碼的 md5 驗證碼，而不是直接傳身份證號及出生年月日，後兩者資訊會觸犯招募限制第 2 條規定，此封信也需經由筆試網站寄出，以個人或他人信箱寄出一樣觸犯招募限制第 2 條規定。此 <span class="text-danger">14</span> 碼的 md5 驗證碼乃用在錄取程序上，屆時應聘者須提出有效之中華民國身份證以示該應聘帳號為其所擁用，如<span class="text-danger">不符者勢難聘用</span>。如應聘人擔心屆時無法拿出此驗證碼所對應的中華民國身份證原件，建議先將它的正反面以高解析相機(手機)拍下，並妥善保存電子檔以供錄取時與新身份證正本一同檢驗</li>
                         <li>
-                            筆試為分次出題，題目總共有 8 題，考題沒有範圍，每題也只有一次答題機會，出題速度依據應聘人的答題品質而定，愈高者出題愈快。<span class="text-danger">在回傳答案時，請務必考量筆試網站只能透過純文字(且須用應聘帳號私錀簽章)回傳</span>。以下為題庫：
+                            筆試題庫如下，應聘人可任選考題回答， 3 題數學題改為加分題，每題只有一次答題機會。<span class="text-danger">在回傳答案時，請務必考量筆試網站只能透過純文字(且須用應聘帳號私錀簽章)回傳</span>。以下為題庫：
                             <ol class="p">
                                 <li><p>
                                     請建立一個 hg 或 git 的儲存庫，庫內的檔案將包含你接下來要回答的 7 個題目。在作 commit 時，請填寫合宜的說明、使用應聘帳號為 committer ，並選擇在適當的時機，表現你懂得使用 branch 及 merge 功能，最終在 default branch(hg) 或是 master branch(git) 顯示你的所有答案。此儲存庫在回傳給考試委員前，請注意要消除 remote(push) url 的蹤跡。
@@ -513,19 +498,16 @@
                                 </li>
                                 <li><p>說說你想要拿那些開放原始碼函式庫來建構什麼樣的網站服務。純打嘴炮，不寫 code 。<span class="text-danger">此題並不受「招募限制第二條」規範</span>。也就是說，若在此題答案中有意或無意透露出的資訊，可讓考試委員 Google 到你的個人識別資訊包含但不僅限於電子信箱、部落格、網站、網域、學歷、科系、學校、種族、階級、宗教、黨派、籍貫、出生地、性別、性傾向、年齡、婚姻、容貌、五官、身心障礙或以往工會會員身分者。<span class="text-danger">請注意，是該資訊被拿來 Google ，而不是大刺刺地在答案內載明</span>，因為，當你能回到這一題，已表示能力十分充足，只差有沒有願景而已，如果你在應徵敝司工作前，即有抱負，更是大大加分。</p></li>
                             </ol>
-                            如未答滿 8 題，卻又遲遲未接到新的題目，意謂考試委員<span class="text-danger">十分不滿意</span>您的答案，選擇無限期停問，請勿來信詢問或是催促出題。敝公司開發的筆試網站，保證應聘人必定會拿到試題(前提是您要登入筆試網站)，如未拿到試題，考試委員會接到系統警告，於此，您久久未拿到試題，<span class="text-danger">絕對</span>是考試委員認定您目前的資質不好，請再多自學一陣子，之後再來應聘，反正<span class="text-danger">考試委員也不會知道您的新帳號是與之前那個舊帳號一樣</span>
+                            如答題回覆後，卻又遲遲未接到下一階段的通知訊息，意謂考試委員<span class="text-danger">十分不滿意</span>您的答案，請勿來信詢問或是催促出題，是考試委員認定您目前的資質不好，請再多自學一陣子，之後再來應聘，反正<span class="text-danger">考試委員也不會知道您的新帳號是與之前那個舊帳號一樣</span>
                         </li>
                         <li>
-                            在考試委員接受您的第 8 題答案後，即會與您約定電談時間(最多 1 小時)，若為聽障或語障者(以身心障礙手冊認定)，則使用 Skype/FB Message/Google Hangout/Line/... 等即時對談工具，以打字方式考試
+                            在考試委員接受您的答案後，即會與您約定電談時間(最多 1 小時)，若為聽障或語障者(以身心障礙手冊認定)，則使用 Skype/FB Message/Google Hangout/Line/... 等即時對談工具，以打字方式考試
                         </li>
                         <li>
                             電談/字談未通過者，會儘早通知。而通過者，則約定面試時間(最多 2 小時)，會補助本島部份的交通費，採實報實銷，上限 2,000 元，回程票據須請面試者掛號寄回。面試者為下肢障者(以身心障礙手冊認定)此時須告知，方便敞公司整理面試環境。<span class="text-danger">面試時，須繳交對應前述 14 碼 md5 驗證碼的身份證正本，當面驗完立即歸還</span>
                         </li>
                         <li>
-                            面試未通過者，會儘早通知。而通過者，再約定實地實習時間，連續 4 個日曆天，每天薪資以 3,000 元計(以銀行轉帳支付至面試者擁有帳戶)，享勞健保，供食宿
-                        </li>
-                        <li>
-                            實地實習未通過者，會儘早通知。而通過者即進入員工聘雇程序
+                            面試未通過者，會儘早通知。而通過者，而通過者即進入員工聘雇程序
                         </li>
                     </ul>
                     <p>
