--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -405,7 +405,7 @@
                 <h2 class="text-center">招募限制</h2>
                 <p>1.</p>
                 <p>
-                    應聘者須擁有中華民國國籍，遠端工作地點主要於中華民國實際管轄境內，且須具備 10 M/sec 以上之網路(含3G/4G電信上網)。
+                    應聘者須擁有中華民國國籍，遠端工作地點主要於中華民國實際管轄境內，且須具備或可申請 5M/sec 以上之網路(含3G/4G電信上網)。
                 </p>
                 <p>
                 </p>
