--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -376,7 +376,7 @@
                     <p>依 104 年 12 月 16 日修正之新版勞基法<a href="http://law.moj.gov.tw/LawClass/LawSingle.aspx?Pcode=N0030001&FLNO=30">第 30 條</a>規定，敝公司之員工工作時數如下：
                     <ul class="p">
                         <li>每周工時最多為 48 小時，每月總工時最多為 160 小時
-                        <li>單日上班時數上限為 10 小時，上班時間為早上 6 點至 晚上 10 點的區間內任選 3 ~ 10 個工作小時</li>
+                        <li>單日上班時數上限為 8 小時，上班時間為早上 6 點至晚上 10 點的區間內任選時段，每個工作時段以實際勞務提供為算，最少須連續 3 小時，最長原則不得超過 4 小時，但如工作有連續性或緊急性時，最長不得超過8小時，工作時段之間的非工作時間/休息時間至少須 1 小時以 上。</li>
                     </ul>
                 </div>
             </div>
