--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -377,6 +377,7 @@
                     <ul class="p">
                         <li>每周工時最多為 48 小時，每月總工時最多為 160 小時
                         <li>單日上班時數上限為 8 小時，上班時間為早上 6 點至晚上 10 點的區間內任選時段，每個工作時段以實際勞務提供為算，最少須連續 3 小時，最長原則不得超過 4 小時，但如工作有連續性或緊急性時，最長不得超過8小時，工作時段之間的非工作時間/休息時間至少須 1 小時以 上。</li>
+                        <li>其他未盡事項，皆依<a href="http://www.mol.gov.tw/topic/3067/14530/24411/">勞工在事業場所外工作時間指導原則</a>辦理。</li>
                     </ul>
                 </div>
             </div>
