salary can be negotiable

--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -271,6 +271,9 @@
                 </tbody>
             </table>
             <p>
+                上表乃以每月薪資 5 萬估算，而實際薪資區間會在每月 2.5 萬~ 8.5 萬之間，<strong>端視應聘者的技術能力來議價，也歡迎員工到職後，透過自我技術能力的提升要求敝司加薪</strong>。
+            </p>
+            <p>
                 一般企業常見的生日禮金、三節禮金、員工旅遊、尾牙抽獎都<span class="text-danger">不會有</span>，主要原因是敝公司不是「<strong>一般企業</strong>」，而次要原因如下：
             </p>
             <ul class="p">
@@ -357,8 +360,7 @@
                 </p>
                 <p>
                     工作角色分為三大部份： 系統管理員(DevOps)、後端程式開發員、前端設計師。每一員工皆需擔任此三角色，也就是所謂的「<span
-                        class="text-danger">全能工班(營建業術語: Full-Capacity Operation) || 網站全端工程師(軟體業術語: Full Stack Web Engineer)</span>」，惟其工作比例可有不一，目前依序分配為
-                    20%，40%，40% 。然此比例會視公司需要有所調整，並不受限於招募時期所定比例。
+                        class="text-danger">全能工班(營建業術語: Full-Capacity Operation) || 網站全端工程師(軟體業術語: Full Stack Web Engineer)</span>」，惟其工作比例可有不一，目前<strong>重點徵求後端程式開發員</strong>，內容比例約為 10% DevOps 、 70% 後端開發 、 20% 前端開發。
                 </p>
                 <p>
                     在溝通語言及文件寫作上，主要使用中華民國國語，次要使用英文，少部份使用日文。
