--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -271,7 +271,7 @@
                 </tbody>
             </table>
             <p>
-                上表乃以每月薪資 5 萬估算，而實際薪資區間會在每月 2.5 萬~ 8.5 萬之間，<strong>端視應聘者的技術能力來議價，也歡迎員工到職後，透過自我技術能力的提升要求敝司加薪</strong>。
+                上表乃以每月薪資 5 萬估算，而實際薪資區間會在每月 2.5 萬~ 8.5 萬之間，<strong>端視應聘者的技術能力來議價，也歡迎員工到職後，透過自我技術能力的提升要求敝司加薪</strong>。<span class="text-primary">另開放遠端及埔里的兼職職缺，若應聘者目前尚在就學(外籍生須具工作許可證)、已在其他公司擔任全職或兼職工作，只要業務內容不與敝司工作業務衝突，也歡迎有志者來兼職，兼職薪資為每小時 150 ~ 300 元，並享有勞健保</span>。
             </p>
             <p>
                 一般企業常見的生日禮金、三節禮金、員工旅遊、尾牙抽獎都<span class="text-danger">不會有</span>，主要原因是敝公司不是「<strong>一般企業</strong>」，而次要原因如下：
@@ -360,7 +360,10 @@
                 </p>
                 <p>
                     工作角色分為三大部份： 系統管理員(DevOps)、後端程式開發員、前端設計師。每一員工皆需擔任此三角色，也就是所謂的「<span
-                        class="text-danger">全能工班(營建業術語: Full-Capacity Operation) || 網站全端工程師(軟體業術語: Full Stack Web Engineer)</span>」，惟其工作比例可有不一，目前<strong>重點徵求後端程式開發員</strong>，內容比例約為 10% DevOps 、 70% 後端開發 、 20% 前端開發。
+                        class="text-danger">全能工班(營建業術語: Full-Capacity Operation) || 網站全端工程師(軟體業術語: Full Stack Web Engineer)</span>」，惟其工作比例可有不一，目前<span class="text-info">
+                    <strong>重點徵求後端程式開發員</strong></span>，實際工作內容比例約為 10% DevOps 、
+                    70% 後端開發 、
+                    20% 前端開發。
                 </p>
                 <p>
                     在溝通語言及文件寫作上，主要使用中華民國國語，次要使用英文，少部份使用日文。
@@ -376,7 +379,7 @@
                     <li>Ubuntu Linux</li>
                     <li>pfSense OS: OpenVPN/IPSec</li>
                     <li>NGINX</li>
-                    <li>uWSGI</li>
+                    <li>uWSGI / gunicorn</li>
                     <li>PostgreSQL</li>
                     <li>Jenkins / Buildbot</li>
                     <li>Python2 + Django + south + tastypei + guardian +
