Close the job offering

--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta property="fb:app_id" content="483015181718546"/>
-    <meta property="og:title" content="到 何六百工作(遠端徵1~2人)"/>
+    <meta property="og:title" content="到 何六百工作"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://jobs.ho600.com"/>
     <meta property="og:image"
@@ -14,7 +14,7 @@
     <meta property="og:description"
           content="年薪:30~100萬 ; 每月工時:160小時- ; 學歷/科系/性別/年齡/...: 不限; 主要工作語言: 中華民國國語，次為英文及日文; 公司專長: 難題諮詢, 專業營建管理, 系統管理, 網頁程式設計; 使命: 讓現實世界映射在 0 與 1 的網路上，求解後供人們作對的事;"/>
 
-    <title>到 何六百工作(遠端徵1~2人)</title>
+    <title>到 何六百工作</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
@@ -82,7 +82,7 @@
             </button>
             <a class="navbar-brand page-scroll" href="/#page-top">
                 <i class="fa fa-play-circle"></i> <span class="light">到</span>
-                何六百工作(遠端徵1~2人)
+                何六百工作
             </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
