--- a/promo-jobs-ho600-com/index.html
+++ b/promo-jobs-ho600-com/index.html
@@ -87,6 +87,10 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2 class="text-center">方案說明</h2>
+                <ol class="p">
+                    <li>未完待續!
+                    </li>
+                </ol>
             </div>
         </div>
     </section>
