--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -753,8 +753,8 @@ s.setAttribute('data-timestamp', +new Date());
                 href="https://www.ho600.com/">ho600 Ltd.</a></strong><br/>
             No.42-7, Dongrun Rd., Puli Township, Nantou County 54557, Taiwan
             (R.O.C.) <br/>
-            <span id="build_version">Deploy Time: ${BUILD_TIME} with ${BUILD_NUMBER}-<a
-                    href="https://bitbucket.org/ho600/jobs-ho600-com/commits/${REVISION}">${REVISION}</a></span>
+            <span id="build_version">Deploy Time: ${BUILD_TIME}-<a
+                    href="https://github.com/ho600-ltd/jobs-ho600-com/commit/${REVISION}">${REVISION}</a></span>
         </p>
     </div>
 </footer>
