--- a/promo-jobs-ho600-com/index.html
+++ b/promo-jobs-ho600-com/index.html
@@ -167,7 +167,8 @@ s.setAttribute('data-timestamp', +new Date());
         <div class="container text-center">
             <p>Copyright &copy; <span id="copyright_year">2015</span> <strong><a href="https://www.ho600.com/">ho600 Ltd.</a></strong><br/>
                 No.42-7, Dongrun Rd., Puli Township, Nantou County 54557, Taiwan (R.O.C.) <br/>
-                <span id="build_version">Deploy Time: ${BUILD_TIME} with ${BUILD_NUMBER}-<a href="https://bitbucket.org/ho600/jobs-ho600-com/commits/${REVISION}">${REVISION}</a></span>
+                <span id="build_version">Deploy Time: ${BUILD_TIME}-<a
+                    href="https://github.com/ho600-ltd/jobs-ho600-com/commit/${REVISION}">${REVISION}</a></span>
             </p>
         </div>
     </footer>
