Use SHORT_REVISION

--- a/jobs-ho600-com/index.html
+++ b/jobs-ho600-com/index.html
@@ -754,7 +754,7 @@ s.setAttribute('data-timestamp', +new Date());
             No.42-7, Dongrun Rd., Puli Township, Nantou County 54557, Taiwan
             (R.O.C.) <br/>
             <span id="build_version">Deploy Time: ${BUILD_TIME}-<a
-                    href="https://github.com/ho600-ltd/jobs-ho600-com/commit/${REVISION}">${REVISION}</a></span>
+                    href="https://github.com/ho600-ltd/jobs-ho600-com/commit/${REVISION}">${SHORT_REVISION}</a></span>
         </p>
     </div>
 </footer>
